--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 #hour,
 #minute,
 #second {
-    position: absolute; /* Change from relative to absolute */
+    position: absolute;
     background: black;
     border-radius: 10px;
     transform-origin: bottom;
@@ -38,20 +38,20 @@
     top: 9%;
     left: 49.25%;
     opacity: 0.8;
-}
 
+}
 .B {
-    position: absolute;
+    position: relative;
     left: 50%;
     top: 45%;
     transform: translate(-50%, -50%);
 }
-
 .B img {
-    width: 25px;
+    width: 28px;
     border-radius: 34px;
-}
+    
 
+}
 .Time {
     position: absolute;
     left: 43%;
@@ -60,8 +60,8 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-size: 34px;
     animation: colorBlink 2s ease-in-out infinite;
+   
 }
-
 @keyframes colorBlink {
     0% {
         color: rgb(89, 205, 50);
@@ -155,12 +155,12 @@
         -814px -337px #cfcfcf, 206px -339px #f2f2f2, -779px 108px #e6e6e6, 808px 2px #d4d4d4, 665px 41px #d4d4d4, -564px 64px #cccccc, -380px 74px #cfcfcf, -369px -60px #f7f7f7, 47px -495px #e3e3e3, -383px 368px #f7f7f7, 419px 288px #d1d1d1,
         -598px -50px #c2c2c2, -833px 187px #c4c4c4, 378px 325px whitesmoke, -703px 375px #d6d6d6, 392px 520px #d9d9d9, -492px -60px #c4c4c4, 759px 288px #ebebeb, 98px -412px #c4c4c4, -911px -277px #c9c9c9;
     transform-style: preserve-3d;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    height: 4px;
-    width: 4px;
-    border-radius: 2px;
+    height: 1%;
+    width: 1%;
+    border-radius: 20%;
 }
 .star-field .layer:nth-child(1) {
     animation: sf-fly-by-1 5s linear infinite;
