--- a/style.css
+++ b/style.css
@@ -159,9 +159,9 @@
     
     top: 50%;
     left: 50%;
-    height: 1%;
-    width: 1%;
-    border-radius: 20%;
+    height: 3px;
+    width: 4px;
+    border-radius: 2px;
 }
 .star-field .layer:nth-child(1) {
     animation: sf-fly-by-1 5s linear infinite;
